@@ -1,9 +1,12 @@
+import pkg_resources
+
 try:
-    from openid.yadis import etxrd
-    HAS_OPENID=True
-except:
-    HAS_OPENID=False
+    pkg_resources.get_distribution('openid.yadis')
+except pkg_resources.DistributionNotFound:
+    HAS_OPENID = False
+else:
+    HAS_OPENID = True
 
 import socket
-HAS_SSL=hasattr(socket, "ssl")
+HAS_SSL = hasattr(socket, "ssl")
 del socket
