@@ -10,16 +10,18 @@ setup(name='plone.openid',
       classifiers=[
           "Environment :: Web Environment",
           "Framework :: Plone",
+          "Framework :: Plone :: 5.0",
           "Framework :: Zope2",
           "License :: OSI Approved :: BSD License",
           "Operating System :: OS Independent",
           "Programming Language :: Python",
+          "Programming Language :: Python :: 2.7",
           "Topic :: System :: Systems Administration :: Authentication/Directory",
         ],
       keywords='PAS openid authentication',
       author='Plone Foundation',
       author_email='plone-developers@lists.sourceforge.net',
-      url='http://svn.plone.org/svn/plone/plone.openid',
+      url='https://github.com/plone/plone.openid',
       license='BSD',
       packages=find_packages(exclude=['ez_setup']),
       namespace_packages=['plone'],
